--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,10 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" th:if="${session.user!=null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getName() }"> <span class="caret"></span></a>
+                       aria-expanded="false">
+                        <span th:text="${session.user.getUsername()}"></span>
+                        <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人信息</a></li>
@@ -36,7 +39,7 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=ebb6dacaeed0a07dd7bf&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                    <a href="https://github.com/login/oauth/authorize?client_id=ebb6dacaeed0a07dd7bf&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a>
                 </li>
 
             </ul>
