--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -10,3 +10,13 @@ body {
     float: right;
     margin-bottom: 15px;
 }
+.img-rounded{
+    width: 40px;
+    height: 40px;
+}
+.text-desc{
+    padding-left: 45px;
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
